20/07/10 Julien Dutheil
* New Sequence interface design.

19/07/10 Julien Dutheil
* New method isInit in CodonAlphabet.
* New method getCDS in SequenceTools.

28/04/10 Julien Dutheil
* New MAF genome alignment parser.

22/04/10 Sylvain Gaillard
* Break SequenceTools interface:
		- renamed invert -> getInvert
		- renamed complement -> getComplement
	now invert and complement methods deals with sequence ref
		- New method invertComplement

16/04/10 Julien Dutheil
* New Stockholm sequence format (output only).
* Refactoring of class ISequence2 => IAlignment + new interface OAlignment.

24/03/10 -*- Version 1.7.0 -*-

11/03/10 Julien Dutheil
* Nexus format now deals with lower case keywords.

17/12/09 Julien Dutheil
* Code cleaning for VectorSiteContainer
* New class CompressedVectorSiteContainer using less memory than
  VectorSiteContainer, but more restricted.

16/11/09 Sylvain Gaillard
* No more "using namespace" in header files.

04/11/09 Julien Dutheil
* Remove SymbolListTools::randomizeContent to a more efficient SymbolList::shuffle
method.

12/10/09 Julien Dutheil
* Now SeqLib compiles with -Weffc++ and -Wshadow without any warning :)

22/09/09 Julien Dutheil
* Finally added 'addSequence' method in SequenceContainer.
* MapSequenceContainer now has a addSequence method that uses the name of the
  sequence as a key by default.
* Several methods in Sequence/SiteContainerTools are not templated anymore and
  have been improved.

09/09/09 Sylvain Gaillard
* Fixed white space skip in Fasta sequence

20/08/09 Julien Dutheil
* Added config files for CMake.

19/08/09 Sylvain Gaillard
* Introduced 3 new interfaces IOSequenceStream, ISequenceStream and
  OSequenceStream. These interfaces are intended to be used by IOFormat
  dealing with Sequence and not SequenceContainers. They are actually
  implemented by the Fasta class.

17/08/09 Adam Smith
* Bug fixed in DefaultAlphabet: unknow state is 37 not 38.

04/08/09 Sylvain Gaillard